--- a/Domotica.Server/Domotica.Server.csproj
+++ b/Domotica.Server/Domotica.Server.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<RuntimeIdentifier>linux-arm</RuntimeIdentifier>
+		<!--<RuntimeIdentifier>linux-arm</RuntimeIdentifier>-->
 		<Nullable>disable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<ProduceReferenceAssembly>True</ProduceReferenceAssembly>
