--- a/Domotica.Server/Properties/launchSettings.json
+++ b/Domotica.Server/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://192.168.2.46:7077;http://192.168.2.46:7078",
+      "applicationUrl": "https://localhost:7077;http://localhost:7078",
       "dotnetRunMessages": true
     },
     "IIS Express": {
