--- a/SignalClient/SignalClient.csproj
+++ b/SignalClient/SignalClient.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
 	  <OutputType>Exe</OutputType>
-	  <RuntimeIdentifier>linux-arm</RuntimeIdentifier>
+	  <!--<RuntimeIdentifier>linux-arm</RuntimeIdentifier>-->
 	  <TargetFramework>net6.0</TargetFramework>
 	  <ImplicitUsings>enable</ImplicitUsings>
 	  <PlatformTarget>AnyCPU</PlatformTarget>
